# tokopedia

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml  python-publish.yml
tests/: test_tokopedia.py
tests/test_product/: conftest.py  test_active_products.py  test_create_product_v3.py  test_product.py  test_product_v2.py  test_variant_category.py  test_variant_product.py
tokopedia/: __init__.py  access_token.py  base.py  constants.py  response.py  tokopedia.py  utils.py
tokopedia/order/: __init__.py  api.py
tokopedia/product/: __init__.py  active_products.py  api.py  create_product_v3.py  product.py  product_v2.py  variant_category.py  variant_product.py
tokopedia/product/api/: __init__.py  create_product.py  get_product.py  get_product_variant.py  product_api.py
tokopedia/shop/: __init__.py  api.py
tokopedia/utils/: helpers.py
