[tool.poetry]
name = "tokopedia"
version = "0.1.0"
description = ""
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
mypy = "^0.812"
black = "^20.8b1"
pylint = "^2.7.2"
pre-commit = "^2.11.1"
pytest-cov = "^2.11.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
