[tool.poetry]
name = "tokopedia"
version = "0.4.1"
description = "Python SDK for Tokopedia Seller API "
authors = ["hexatester <hexatester@protonmail.com>"]
readme = "README.md"
keywords = [
    "tokopedia",
    "openapi",
    "api-client",
    "tokopedia-api",
    "seller-api",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
attrs = "^20.3.0"
cattrs = "^1.3.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "4.0.1"
mypy = "0.931"
black = "22.1.0"
pylint = "2.12.2"
pre-commit = "^2.11.1"
pytest-cov = "^2.11.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
